1-canary/greetingsvc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: greeting
  name: greeting
  namespace: testistio
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: greeting
