1-canary/virtualservice.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: greeting-virtual-service
  namespace: testistio
spec:
  hosts:
  - "*"
  gateways:
  - greeting-gateway  
  http:
  - name: greetingApp
    match:
    - uri:
        exact: "/hello"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: greeting
        subset: v1
        port:
          number: 8080
      weight: 80
    - destination:
        host: greeting
        subset: v2
        port:
          number: 8080
      weight: 10
    - destination:
        host: greeting
        subset: v3
        port:
          number: 8080
      weight: 10
